--- a/member.html
+++ b/member.html
@@ -42,6 +42,8 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+        <p>あたおかな新入生。沸いてるオタクを沸かすイベントを開くのが夢</p>
+        <p>一言：「あたおかかかってこいよ」</p>
       </div>
     </div>
 
