--- a/member.html
+++ b/member.html
@@ -43,7 +43,7 @@
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
         <p>あたおかな新入生。沸いてるオタクを沸かすイベントを開くのが夢</p>
-        <p>一言：「あたおかかかってきてもいいのよ」</p>
+        <p>一言：「お兄ちゃん信じてたのに・・・・不倫するなんて・・・」</p>
       </div>
     </div>
 
