--- a/member.html
+++ b/member.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
@@ -42,8 +42,6 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
-        <p>あたおかな新入生。沸いてるオタクを沸かすイベントを開くのが夢</p>
-        <p>一言：「あたおかかかってきてもいいのよ」</p>
       </div>
     </div>
 
