--- a/member.html
+++ b/member.html
@@ -42,6 +42,8 @@
       <div class="col harf">
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
+        <p>厄介勢です。</p>
+        <p>一言：「最近の厄介と違って凶悪です、取り扱いには注意してください」</p>
       </div>
     </div>
 
