更新 (+1 squashed commits)
Squashed commits:

[0e85832] q+7

--- a/member.html
+++ b/member.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
         <p>あたおかな新入生。沸いてるオタクを沸かすイベントを開くのが夢</p>
-        <p>一言：「お兄ちゃん信じてたのに・・・・不倫するなんて・・・」</p>
+        <p>一言：「あたおかかかってこいよ」</p>
       </div>
     </div>
 
@@ -52,7 +52,7 @@
       <table>
         <tbody>
           <tr>
-            <th>魔王教授</th>
+            <th>魔王様</th>
             <td>「まぁ、悪い人ではないのよ」by エルマス<br>「もう慣れました」by わかば</td>
           </tr>
           <tr>
