--- a/member.html
+++ b/member.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
@@ -68,7 +68,7 @@
     </div>
   </main>
   <footer>
-    <p>本サイトは、書籍「わかばちゃんと学ぶGit使い方入門」の練習用素材です</p>
+    <p>本サイトは、書籍「わかばちゃんと学ぶGit使い方入門」の練習用素材だ。</p>
   </footer>
 </body>
 </html>
